Refactored to use more generic components

--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -87,17 +87,17 @@
     <Compile Include="Assets\ConvexHullCalculator.cs" />
     <Compile Include="Assets\EntitasSetup.cs" />
     <Compile Include="Assets\Events.cs" />
-    <Compile Include="Assets\Features\Attack\AddArrowViewSystem.cs" />
     <Compile Include="Assets\Features\Attack\AiAttackOrderSystem.cs" />
+    <Compile Include="Assets\Features\Attack\ApplyForceSystem.cs" />
     <Compile Include="Assets\Features\Attack\ArrowComponent.cs" />
     <Compile Include="Assets\Features\Attack\ArrowStickToCollidedSystem.cs" />
-    <Compile Include="Assets\Features\Attack\ArrowTemplateComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInputComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInteractionSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackOrderComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackSystem.cs" />
     <Compile Include="Assets\Features\Attack\CollisionComponent.cs" />
     <Compile Include="Assets\Features\Attack\CollisionPublisher.cs" />
+    <Compile Include="Assets\Features\Attack\ForceComponent.cs" />
     <Compile Include="Assets\Features\Attack\PitchFromVelocitySystem.cs" />
     <Compile Include="Assets\Features\Attack\RenderAttackArrowSystem.cs" />
     <Compile Include="Assets\Features\Attack\SquadAttackOrderSystem.cs" />
@@ -105,7 +105,6 @@
     <Compile Include="Assets\Features\AudioComponent.cs" />
     <Compile Include="Assets\Features\ComponentContainer.cs" />
     <Compile Include="Assets\Features\ConvexHullCalculator.cs" />
-    <Compile Include="Assets\Features\CreateSquad\AddUnitViewSystem.cs" />
     <Compile Include="Assets\Features\CreateSquad\BoxFormationComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\PositionComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\QuaternionClass.cs" />
@@ -113,7 +112,6 @@
     <Compile Include="Assets\Features\CreateSquad\SquadComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\SquadCreationSystem.cs" />
     <Compile Include="Assets\Features\CreateSquad\UnitComponent.cs" />
-    <Compile Include="Assets\Features\CreateSquad\UnitTemplateComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\VectorClass.cs" />
     <Compile Include="Assets\Features\CreateSquad\ViewComponent.cs" />
     <Compile Include="Assets\Features\Destruction\DestroyComponent.cs" />
@@ -158,17 +156,15 @@
     <Compile Include="Assets\Features\View\RenderRotationSystem.cs" />
     <Compile Include="Assets\Features\View\Resources.cs" />
     <Compile Include="Assets\FloatExtensions.cs" />
-    <Compile Include="Assets\Generated\AddArrowViewSystemGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\AddUnitViewSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AddViewSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiAttackOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AnimateComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AnimateUnitSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\ApplyForceSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ArrowComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ArrowStickToCollidedSystemGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\ArrowTemplateComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Move.RemoveMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Selection.MoveInteractionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Selection.SelectInteractionSystemGeneratedExtension.cs" />
@@ -186,6 +182,7 @@
     <Compile Include="Assets\Generated\DestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroySystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\EnemyComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\ForceComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\GroundComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\InputComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\LinkViewsStartSystemGeneratedExtension.cs" />
@@ -216,7 +213,6 @@
     <Compile Include="Assets\Generated\SquadCreationSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitComponentGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\UnitTemplateComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitsCacheComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitsCacheSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\VelocityComponentGeneratedExtension.cs" />
