--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="Features\AiAttackOrderSystemTests.cs" />
     <Compile Include="Features\AiMoveOrderSystemTests.cs" />
+    <Compile Include="Features\CreateSquad\SelectionAreaDecoratorSystemTests.cs" />
     <Compile Include="Features\ShowSelectedIndicatorForSquadSystemTests.cs" />
     <Compile Include="Features\PitchFromVelocitySystemTests.cs" />
     <Compile Include="Features\AttackSystemTests.cs" />
