--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.1.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -95,8 +93,8 @@
     <Compile Include="Assets\Features\Attack\AttackInteractionSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackOrderComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackSystem.cs" />
-    <Compile Include="Assets\Features\Attack\CollisionComponent.cs" />
     <Compile Include="Assets\Features\Attack\Collidable.cs" />
+    <Compile Include="Assets\Features\Attack\CollisionComponent.cs" />
     <Compile Include="Assets\Features\Attack\ForceComponent.cs" />
     <Compile Include="Assets\Features\Attack\PitchFromVelocitySystem.cs" />
     <Compile Include="Assets\Features\Attack\ReloadComponent.cs" />
@@ -120,6 +118,8 @@
     <Compile Include="Assets\Features\CreateSquad\UnitComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\VectorClass.cs" />
     <Compile Include="Assets\Features\CreateSquad\ViewComponent.cs" />
+    <Compile Include="Assets\Features\Destruction\DelayedDestroyComponent.cs" />
+    <Compile Include="Assets\Features\Destruction\DelayedDestroySystem.cs" />
     <Compile Include="Assets\Features\Destruction\DestroyComponent.cs" />
     <Compile Include="Assets\Features\Destruction\DestroySystem.cs" />
     <Compile Include="Assets\Features\Destruction\RemoveViewSystem.cs" />
@@ -179,6 +179,7 @@
     <Compile Include="Assets\Generated\Assets.Features.Attack.ReloadSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaAddDecoratorSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaRemoveDecoratorSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\Assets.Features.Destruction.DelayedDestroySystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Move.RemoveMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Selection.MoveInteractionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Selection.SelectInteractionSystemGeneratedExtension.cs" />
@@ -194,6 +195,7 @@
     <Compile Include="Assets\Generated\ChildComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\CollisionComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ComponentIds.cs" />
+    <Compile Include="Assets\Generated\DelayedDestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroySystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\EnemyComponentGeneratedExtension.cs" />
