--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -259,15 +259,16 @@
     <Compile Include="Assets\Libraries\Entitas.CodeGenerator\IPoolCodeGenerator.cs" />
     <Compile Include="Assets\Libraries\Entitas.CodeGenerator\ISystemCodeGenerator.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity.CodeGenerator\CodeGeneratorConfig.cs" />
+    <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\DebugSystems\DebugSystems.cs" />
+    <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\DebugSystems\DebugSystemsBehaviour.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\Entity\EntityBehaviour.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\PoolObserver\PoolObserver.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\PoolObserver\PoolObserverBehaviour.cs" />
-    <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\SystemsObserver\DebugSystems.cs" />
-    <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\SystemsObserver\SystemsDebugBehaviour.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\VisualDebuggingConfig.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity\EntitasPreferencesConfig.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity\Properties.cs" />
     <Compile Include="Assets\Libraries\Entitas\Entity.cs" />
+    <Compile Include="Assets\Libraries\Entitas\Extensions\AllOfMatcherExtension.cs" />
     <Compile Include="Assets\Libraries\Entitas\Extensions\CollectionExtension.cs" />
     <Compile Include="Assets\Libraries\Entitas\Extensions\GroupExtension.cs" />
     <Compile Include="Assets\Libraries\Entitas\Extensions\PoolExtension.cs" />
@@ -277,14 +278,15 @@
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IEnsureComponents.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IExcludeComponents.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IExecuteSystem.cs" />
+    <Compile Include="Assets\Libraries\Entitas\Interfaces\IInitializeSystem.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IMatcher.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IMultiReactiveSystem.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IReactiveExecuteSystem.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\IReactiveSystem.cs" />
-    <Compile Include="Assets\Libraries\Entitas\Interfaces\IStartSystem.cs" />
     <Compile Include="Assets\Libraries\Entitas\Interfaces\ISystem.cs" />
     <Compile Include="Assets\Libraries\Entitas\Matcher\AbstractMatcher.cs" />
     <Compile Include="Assets\Libraries\Entitas\Matcher\AllOfMatcher.cs" />
+    <Compile Include="Assets\Libraries\Entitas\Matcher\TriggerOnEvent.cs" />
     <Compile Include="Assets\Libraries\Entitas\Pool.cs" />
     <Compile Include="Assets\Libraries\Entitas\ReactiveSystem.cs" />
     <Compile Include="Assets\Libraries\Entitas\Systems.cs" />
