--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -89,7 +89,6 @@
     <Compile Include="Assets\Events.cs" />
     <Compile Include="Assets\Features\Attack\AiAttackOrderSystem.cs" />
     <Compile Include="Assets\Features\Attack\ApplyForceSystem.cs" />
-    <Compile Include="Assets\Features\Attack\ArrowComponent.cs" />
     <Compile Include="Assets\Features\Attack\ArrowStickToCollidedSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackInputComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInteractionSystem.cs" />
@@ -103,6 +102,7 @@
     <Compile Include="Assets\Features\Attack\ReloadSystem.cs" />
     <Compile Include="Assets\Features\Attack\RenderAttackArrowSystem.cs" />
     <Compile Include="Assets\Features\Attack\SquadAttackOrderSystem.cs" />
+    <Compile Include="Assets\Features\Attack\StickableComponent.cs" />
     <Compile Include="Assets\Features\Attack\VelocityComponent.cs" />
     <Compile Include="Assets\Features\AudioComponent.cs" />
     <Compile Include="Assets\Features\ComponentContainer.cs" />
@@ -176,7 +176,6 @@
     <Compile Include="Assets\Generated\AnimateComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AnimateUnitSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ApplyForceSystemGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\ArrowComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ArrowStickToCollidedSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Attack.ReloadSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaAddDecoratorSystemGeneratedExtension.cs" />
@@ -218,7 +217,7 @@
     <Compile Include="Assets\Generated\PlayerComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Pools.cs" />
     <Compile Include="Assets\Generated\PositionComponentGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\ReadVelocitySystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\ReadPhysicsSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ReloadComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\RemovePhysicsSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\RemoveViewSystemGeneratedExtension.cs" />
@@ -237,6 +236,7 @@
     <Compile Include="Assets\Generated\SquadComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadCreationSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadMoveOrderSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\StickableComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitsCacheComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitsCacheSystemGeneratedExtension.cs" />
